--- a/systemctl/devman_client_bot.service
+++ b/systemctl/devman_client_bot.service
@@ -4,7 +4,7 @@ Description=Devman Client Bot
 [Service]
 Type=simple
 WorkingDirectory=/home/durgamail5000/storage_client_bot
-ExecStart=/home/durgamail5000/storage_client_bot/venv/bin/python3.10 /home/durgamail5000/storage_client_bot/client_bot.py
+ExecStart=/bin/bash -c 'source /home/durgamail5000/storage_client_bot/venv/bin/activate && /home/durgamail5000/storage_client_bot/venv/bin/python3.10 /home/durgamail5000/storage_client_bot/client_bot.py'
 Restart=always
 
 [Install]
